# lab_car

./: .gitignore  .gitmodules  README.md  catkin_make.sh
communication_node/: CMakeLists.txt  communication_node.md  package.xml
communication_node/include/: msgs.h  zmq_lib.h  zmq_test.h
communication_node/include/communication_node/: zmq_test.h
communication_node/src/: publish_robot_state.cpp  publisher.cpp  receive_cmd.cpp  receive_host_cmd.cpp  receive_robot_state.cpp  receiver.cpp  send_cmd.cpp  send_robot_state.cpp  send_robot_state_four_car.cpp  test_receive.cpp  test_recv.cpp  transport_image.cpp  zmq_recv.cpp  zmq_send.cpp  zmq_test.cpp
control_node/: CMakeLists.txt  control_node.md  package.xml
control_node/include/Tracking/: AlgoTracking.hpp  helper.hpp  spline2D.hpp  tkspline.h  vxy2vw.hpp
control_node/include/control_node/: control.h  path_tracking_node.h  remote_control_node.h
control_node/src/: path_tracking_node.cpp  remote_control_node.cpp
control_node/src/Tracking/: AlgoTracking.cpp  tkspline.cpp  说明.txt
costmap_node/: CMakeLists.txt  package.xml
costmap_node/config/: costmap_parameter_config_for_global_plan.yaml  costmap_parameter_config_for_local_plan.yaml  inflation_layer_config.yaml  inflation_layer_config_min.yaml  obstacle_layer_config.yaml  static_layer_config.yaml
costmap_node/include/: costmap_2d.h  costmap_interface.h  costmap_layer.h  costmap_math.h  map_common.h  observation_buffer.h  static_layer.h  yaml_convert.h
costmap_node/include/costmap_node/: footprint.h  inflation_layer.h  layer.h  layered_costmap.h  map_common.h  observation.h  obstacle_layer.h  static_layer.h  yaml_convert.h
costmap_node/launch/: test_costmap.launch
costmap_node/src/: costmap_2d.cpp  costmap_interface.cpp  costmap_layer.cpp  costmap_math.cpp  footprint.cpp  inflation_layer.cpp  layer.cpp  layered_costmap.cpp  observation_buffer.cpp  obstacle_layer.cpp  static_layer.cpp  test_costmap.cpp
decision_node/: CMakeLists.txt  behavior_tree.cpp  decision_node.md  package.xml
decision_node/behavior_tree/: behavior_node.h  behavior_state.h  behavior_tree.h
decision_node/blackboard/: blackboard.h
decision_node/example_behavior/: build_up_behavior.h  stand_by_behavior.h
decision_node/inc/: DecisionNodeFir.workspace.xml  GroupLogicVersion.workspace.xml
decision_node/inc/behaviors/: MainTree.xml  TaskJudgeSubTree.xml
decision_node/inc/exported/: MainTree.xml  TaskJudgeSubTree.xml
decision_node/src/: tutorial.cpp
ndt_localization/ndt_localization/: .gitignore  CMakeLists.txt  aloam_map_yizhou.pcd_filter  package.xml
ndt_localization/ndt_localization/config/: gridmapvisual.yaml
ndt_localization/ndt_localization/launch/: run.launch
ndt_localization/ndt_localization/rviz/: ndt_localization.rviz
ndt_localization/ndt_localization/src/: Eliminating_point_cloud_distortion.cpp  gtsam_test.cpp  imu_transform.cpp  map_segmentation.cpp  pcl_fliter.cpp  point_cloud_to_octomap_and_OGM.cpp  point_cloud_to_octomap_and_OGM_node.cpp  scan_to_submap.cpp  scan_to_submap_imu.cpp  scan_to_submap_lego.cpp
perception_node/: CMakeLists.txt  package.xml
perception_node/config/: localization_config.yaml
perception_node/include/perception_node/: location_node.h  obstacle_perception_node.h  perception.h
perception_node/launch/: perception_node.launch
perception_node/src/: localization_node.cpp
robot_library/: CMakeLists.txt  package.xml
robot_library/bitrobot/: readme.md
robot_library/bitrobot/catkin_ws/: testbit.world
robot_library/bitrobot/config/: simpleConfig.txt
robot_library/my_lib/: .gitignore  CMakeLists.txt  Readme.md
robot_library/my_lib/action/: WashDish.action
robot_library/my_lib/include/: my_action.h  my_debug_info.h  my_param_server.h  my_service.h
robot_library/my_lib/src/: change_ros_version.cpp  test_sub_delay.cpp
robot_library/my_lib/srv/: AddNum.srv
robot_msgs/: CMakeLists.txt  package.xml
robot_msgs/action/: BuildUp.action  March.action  PathFollow.action  Search.action
robot_msgs/include/: debug_info.h
robot_msgs/include/alg_factory/: algorithm_factory.h
robot_msgs/include/io/: io.h
robot_msgs/include/state/: error_code.h  node_state.h
robot_msgs/msg/: Cmd.msg  CurrentTask.msg  DebugInfo.msg  Error.msg  Group_Members.msg  HostCmd.msg  HostCmdArray.msg  Mission.msg  PerceptionNodeMsg.msg  RobotState.msg  RobotStates.msg  SourceNodeMsg.msg  State.msg  robot_states_enum.msg
robot_msgs/src/: debug_info.cpp
robot_msgs/srv/: GetConfigCmd.srv  PathCoverage.srv  Planning.srv  ReportPath.srv  Separate.srv  SeparateArea.srv
service_node/: CMakeLists.txt  package.xml  service_node.md
service_node/global_planner/: CMakeLists.txt
service_node/global_planner/config/: planning_config.yaml
service_node/global_planner/include/: AStar.hpp  global_planner.h
service_node/global_planner/src/: global_planner.cpp
service_node/include/service_node/: global_planner.h  (+2 more)
service_node/local_planner/: CMakeLists.txt
service_node/path_coverage/: CMakeLists.txt  cleaning.rviz
service_node/path_follow/: CMakeLists.txt
service_node/separate_goal/: CMakeLists.txt
service_node/src/: global_planner.cpp  test_global_planning.cpp
simulation/simulation/: CMakeLists.txt  package.xml
source_node/: CMakeLists.txt  package.xml
source_node/include/: driver_source.h  gps.h  imu.h  navigation_source.h  source_node.h
source_node/launch/: source_node.launch
source_node/service_node/: CMakeLists.txt  package.xml
source_node/src/: driver_source.cpp  encoder_source.cpp  navigation_source.cpp  pub_cmdvel.cpp  sensor_fusion.cpp
task_node/: CMakeLists.txt  package.xml  task_node.md
task_node/include/: build_up_task.h  build_up_task_multi_car.h
task_node/launch/: four_car.launch  one_car.launch
task_node/src/: build_up_task.cpp  build_up_task1.cpp  build_up_task2.cpp  build_up_task3.cpp  build_up_task4.cpp  build_up_task_multi_car.cpp  build_up_task_nohost.cpp  gps_march_task.cpp  laser_march_task.cpp  search_task.cpp  test_pathCoverage.cpp
test/: CMakeLists.txt  package.xml
test/src/: test_twist.cpp
(+631 files in other folders)
